third_party/WebKit/Source/core/css/MediaValues.cpp
@@ -32,16 +32,12 @@ MediaValues* MediaValues::createDynamicIfFrameExists(LocalFrame* frame) {
 
 double MediaValues::calculateViewportWidth(LocalFrame* frame) {
   ASSERT(frame && frame->view() && frame->document());
-  int viewportWidth = frame->view()->layoutSize(IncludeScrollbars).width();
-  return adjustDoubleForAbsoluteZoom(
-      viewportWidth, frame->document()->layoutViewItem().styleRef());
+  return frame->view()->viewportSizeForMediaQueries().width();
 }
 
 double MediaValues::calculateViewportHeight(LocalFrame* frame) {
   ASSERT(frame && frame->view() && frame->document());
-  int viewportHeight = frame->view()->layoutSize(IncludeScrollbars).height();
-  return adjustDoubleForAbsoluteZoom(
-      viewportHeight, frame->document()->layoutViewItem().styleRef());
+  return frame->view()->viewportSizeForMediaQueries().height();
 }
 
 int MediaValues::calculateDeviceWidth(LocalFrame* frame) {
